fixed icon z-index

--- a/int/css/main.sass
+++ b/int/css/main.sass
@@ -35,7 +35,6 @@ a
 			margin-bottom: 0
 
 	.item-body
-		position: relative
 		text-align: left
 		background: $mainBackground
 
@@ -50,6 +49,8 @@ a
 			-o-transition: all 0.5s linear
 			transition: all 0.5s linear
 
+			&:hover
+				transform: scale(1.1)
 
 	.item-footer
 
@@ -116,6 +117,8 @@ a
 	.icon
 		font-size: 20px
 		color: $darkenColor
+		position: relative
+		z-index: 102
 
 	[type=checkbox]:checked + .icon:before
 		content: "\e912"
